--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -120,8 +120,7 @@ Stable = Grajd
 Circus Maximus = Circus Maximus
 
 Hanging Gardens = Grădini suspendate
- # Requires translation!
-'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
+'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 'Cred că dacă vreun muritor ar fi auzit cuvântul lui Dumnezeu, acesta ar fi într-o grădină la răcoarea zilei.'  - F. Frankfort Moore
 
 Colosseum = Coloseum
 
@@ -179,8 +178,7 @@ Wat =
 
 Oxford University = Universitatea Oxford
 Castle = Castel
- # Requires translation!
-Mughal Fort = 
+Mughal Fort = Fort mogul
 
 Alhambra = Alhambra
  # Requires translation!
@@ -204,8 +202,7 @@ Observatory = Observator
 Opera House = Operă
 
 Sistine Chapel = Capela Sixtină
- # Requires translation!
-'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
+'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 'Trăiesc și iubesc în lumina lui Dumnezeu.' - Michelangelo Buonarroti
 Culture in all cities increased by 25% = Cultura în toate orașele crescută cu 25%
 
 Bank = Bancă
@@ -217,19 +214,16 @@ Hanse =
 Satrap's Court = 
 
 Forbidden Palace = Palatul interzis
- # Requires translation!
-'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 
+'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 'Cei mai mulți dintre noi, după cum alegem, putem face din această lume fie un palat, fie o închisoare' - John Lubbock
 Unhappiness from population decreased by 10% = Nefericirea de la populație a scăzut cu 10%
 
 Theatre = Teatru
 
 Leaning Tower of Pisa = Turnul din Pisa
- # Requires translation!
 'Don't clap too hard - it's a very old building.' - John Osbourne = 'Nu aplauda prea tare - este o clădire foarte veche.' - John Osbourne
 Free Great Person = Persoană mare gratuită
  # Requires translation!
 Choose a free great person = 
- # Requires translation!
 Get  = Obține
 
 Himeji Castle = Castelul Himeji
@@ -250,7 +244,7 @@ Hermitage = Schit
 
 The Louvre = Luvru
  # Requires translation!
-'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 
+'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 'Fiecare lucrare de artă autentică are la fel de mult motiv pentru a fi, cât și pământul și soarele' - Ralph Waldo Emerson
 Free Great Artist Appears = un Artist Mare gratuit apare
 
 Seaport = Port maritim
@@ -291,8 +285,7 @@ Military Academy = Academie militară
 Brandenburg Gate = Poarta Brandenburg
 
 Free Great General appears near the Capital = Marele general gratuit apare în apropierea capitalei
- # Requires translation!
-'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace = 
+'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace = 'Moartea bate în mod egal la poarta săracului și la palatele regilor' - Horațiu
 
 Broadcast Tower = Turn radio
 
@@ -343,7 +336,6 @@ SS Engine = Motor pentru nave spațiale
 SS Stasis Chamber = Cameră de biostază pentru nave spațiale
 
 Hubble Space Telescope = Telescopul spațial Hubble
- # Requires translation!
 'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 'Ceea ce este admirabil nu este că acel câmp al stelelor este atât de vast, ci că omul l-a măsurat şi îl măsoară' - Anatole France
  # Requires translation!
 2 free great scientists appear = 2 mari oameni de știință gratuiți au apărut
@@ -451,24 +443,18 @@ Your arrogant demands are in bad taste = Cererile tale arogante sunt de prost gu
 Your use of nuclear weapons is disgusting! = 
 
 Demands = Cereri
- # Requires translation!
-Please don't settle new cities near us. = 
+Please don't settle new cities near us. = Te rog să nu mai întemeiezi orașe lângă mine.
  # Requires translation!
 Very well, we shall look for new lands to settle. = 
 We shall do as we please. = O să facem cum vrem.
- # Requires translation!
 We noticed your new city near our borders, despite your promise. This will have....implications. = Am văzut noul tău oraș de lângă granița noastră, în ciuda promisiunii. Asta va creea... complicații.
 
 # City states
 
- # Requires translation!
-Provides [amountOfCulture] culture at 30 Influence = 
- # Requires translation!
-Provides 3 food in capital and 1 food in other cities at 30 Influence = 
- # Requires translation!
-Provides 3 happiness at 30 Influence = 
- # Requires translation!
-Provides land units every 20 turns at 30 Influence = 
+Provides [amountOfCulture] culture at 30 Influence = Oferă [amountOfCulture] cultură la 30 influență 
+Provides 3 food in capital and 1 food in other cities at 30 Influence = Oferă 3 mâncare în capitală și 1 mâncare în celelalte orașe la 30 influență
+Provides 3 happiness at 30 Influence = Oferă 3 bucurie la 30 influență
+Provides land units every 20 turns at 30 Influence = Oferă unități terestre la fiecare 20 de ture la 30 influență
 Gift [giftAmount] gold (+[influenceAmount] influence) = Dăruiește [giftAmount] aur (+[influenceAmount] influență)
 Relationship changes in another [turnsToRelationshipChange] turns = Relațiile se vor schimba în [turnsToRelationshipChange] ture
 
@@ -535,7 +521,7 @@ Great general provides double combat bonus, and spawns 50% faster = Marele gener
 
 Egypt = Egipt
 Ramesses II = Ramses II
-+20% production towards Wonder construction = + 20% producție spre construcția de mirare
++20% production towards Wonder construction = +20% producție spre construcția de mirare
 
 England = Anglia
 Elizabeth = Elisabeta
@@ -803,12 +789,11 @@ Work has started on [construction] = Munca a început pentru [construction]
 [cityname] has expanded its borders! = [cityname] și-a extins frontierele!
  # Requires translation!
 Your Golden Age has ended. = 
-[cityName] has been razed to the ground! = [cityName] a fost demolat!
+[cityName] has been razed to the ground! = [cityName] a fost ras de pe fața pământului!
 We have conquered the city of [cityname]! = Am cucerit orașul [cityname]!
 An enemy [unit] has attacked [cityname] = Un [unit] inamic a atacat [cityname]
 An enemy [unit] has attacked our [ourUnit] = Un [unit] inamic ne-a atacat un [ourUnit]
- # Requires translation!
-Enemy city [cityName] has attacked our [ourUnit] = 
+Enemy city [cityName] has attacked our [ourUnit] = Orașul inamic [cityName] ne-a atacat un [outUnit]
 An enemy [unit] has captured [cityname] = Un [unit] inamic a capturat [cityname]
 An enemy [unit] has captured our [ourUnit] = Un [unit] inamic ne-a capturat un [ourUnit]
 An enemy [unit] has destroyed our [ourUnit] = Un [unit] inamic ne-a distrus un [ourUnit]
@@ -856,10 +841,8 @@ You and [name] are no longer allies! = Tu și [name] nu mai sunteți aliați!
 [civName] has accepted your trade request = 
  # Requires translation!
 [civName] has denied your trade request = 
- # Requires translation!
-[tradeOffer] from [otherCivName] has ended = 
- # Requires translation!
-[tradeOffer] to [otherCivName] has ended = 
+[tradeOffer] from [otherCivName] has ended = [tradeOffer] de la [otherCivName] s-a terminat
+[tradeOffer] to [otherCivName] has ended = [tradeOffer] către [otherCivName] s-a terminat
  # Requires translation!
 One of our trades with [nation] has ended = 
  # Requires translation!
@@ -1176,10 +1159,8 @@ Terrains & Resources =
 Improvements = 
  # Requires translation!
 Clear current map = 
- # Requires translation!
-Save map = 
- # Requires translation!
-Download map = 
+Save map = Salvează harta
+Download map = Descarcă harta
  # Requires translation!
 Exit map editor = 
  # Requires translation!
@@ -1199,8 +1180,7 @@ Brush Size =
 
  # Requires translation!
 After Conquering = 
- # Requires translation!
-City Range = 
+City Range = Raza de acțiune a orașului
  # Requires translation!
 Contact Me = 
 Culture and Policies = Cultură și politici
@@ -1255,7 +1235,7 @@ Tradition Complete = Tradiție realizată
 Liberty = Libertate
 +1 culture in every city = +1 cultură în fiecare oraș
 Collective Rule = Regulă colectivă
-Training of settlers increased +50% in capital, receive a new settler near the capital = Antrenamentul colonizatorilor crescut +50% în capitală, se obține un colonizator nou lângă capitală
+Training of settlers increased +50% in capital, receive a new settler near the capital = Antrenamentul coloniștilor crescut +50% în capitală, se obține un colonizator nou lângă capitală
 Citizenship = Cetățenie
 Tile improvement speed +25%, receive a free worker near the capital = +25% rata de construire pentru muncitori, se obține un muncitor gratuit lângă capitală
 Republic = Republică
@@ -1806,8 +1786,7 @@ Caravel = Caravelă
  # Requires translation!
 Turtle Ship = 
 +1 Visibility Range = +1 Rază vizuală
- # Requires translation!
-+2 Visibility Range = 
++2 Visibility Range = +2 Rază vizuală 
 Cannon = Tun
 Musketman = Mușchetar
 Musketeer = Mușchetar
@@ -1945,10 +1924,8 @@ Mobility = Mobilitate
 Volley = 
  # Requires translation!
 Sentry = 
- # Requires translation!
-Extended Range = 
- # Requires translation!
-+1 Range = 
+Extended Range = Rază extinsă
++1 Range = +1 Rază de acțiune
  # Requires translation!
 Ranged attacks may be performed over obstacles = 
 Formation I = Formație I
@@ -2007,8 +1984,7 @@ Air Repair =
 Unit will heal every turn, even if it performs an action = 
  # Requires translation!
 Operational Range = 
- # Requires translation!
-+2 Range = 
++2 Range = +2 Rază de acțiune
  # Requires translation!
 Sortie = 
  # Requires translation!
