--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -48,8 +48,7 @@ Stone Works = Carieră de piatră
 Must not be on plains = Trebuie să nu fie pe câmpie
 
 Stonehenge = Stonehenge
- # Requires translation!
-'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
+'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 'Timpul sfărâmă lucrurile; totul îmbătrânește și este uitat sub puterea timpului' - Aristotel
 
 Library = Bibliotecă
 +1 Science Per 2 Population = +1 știință la 2 persoane
@@ -57,16 +56,13 @@ Paper Maker = Fabricant de hârtie
 
 The Great Library = Marea Bibliotecă
 Free Technology = Tehnologie gratuită
- # Requires translation!
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
-
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 'Bibliotecile sunt ca un altar unde toate moaștele sfinților antici, pline de virtute adevărată, și tot ceea ce fără amăgire sau înșelătorie sunt așezate și păstrate.' - Sir Francis Bacon
 Circus = Circ
 Walls = Ziduri
 Walls of Babylon = Zidurile Babilonului
 
 The Pyramids = Piramidele
- # Requires translation!
-'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
+'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 'O, nu lăsa durerile morții care vin asupra ta să intre în trupul meu. Eu sunt zeul Tem și sunt partea cea dintâi a cerului, iar puterea care mă protejează este aceea care este cu toți zeii pentru totdeauna.' - Fragment din Cartea Morților
 Worker construction increased 25% = Construirea de muncitori a crescut cu 25%
 Provides 2 free workers = Oferă gratuit 2 muncitori
 
@@ -82,14 +78,11 @@ Colossus = Colosul
 
 Temple = Templu
 Burial Tomb = Loc de veci
- # Requires translation!
 Doubles Gold given to enemy if city is captured = Dublează aurul dat inamicului dacă orașul este capturat
- # Requires translation!
 Mud Pyramid Mosque = Moscheea piramidelor de nămol
 
 The Oracle = Oracolul
- # Requires translation!
-'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
+'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Oracolul antic spunea că eu sunt cel mai înțelept dintre toți grecii. Se datorează faptului că eu singur, dintre toți grecii, știu că nu știu nimic.' - Socrate
 Free Social Policy = Politică socială gratuită
 
 
@@ -173,8 +166,7 @@ Connects trade routes over water = Leagă rute comerciale pe apă
 
 University = Universitate
 +2 Science from each worked Jungle tile = Junglele oferă +2 știință
- # Requires translation!
-Wat = 
+Wat = Wat
 
 Oxford University = Universitatea Oxford
 Castle = Castel
@@ -206,8 +198,7 @@ Sistine Chapel = Capela Sixtină
 Culture in all cities increased by 25% = Cultura în toate orașele crescută cu 25%
 
 Bank = Bancă
- # Requires translation!
-Hanse = 
+Hanse = Hansă
  # Requires translation!
 +5% Production for every Trade Route with a City-State in the empire = 
  # Requires translation!
@@ -243,7 +234,6 @@ Museum = Muzeu
 Hermitage = Schit
 
 The Louvre = Luvru
- # Requires translation!
 'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 'Fiecare lucrare de artă autentică are la fel de mult motiv pentru a fi, cât și pământul și soarele' - Ralph Waldo Emerson
 Free Great Artist Appears = un Artist Mare gratuit apare
 
@@ -259,8 +249,7 @@ Stock Exchange = Bursa de Valori
 
 
 Big Ben = Big Ben
- # Requires translation!
-'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 
+'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 'Pentru a realiza lucruri grozave, sunt necesare două lucruri: un plan și nu destul de mult timp.' - Leonard Bernstein
 -15% to purchasing items in cities = -15% la cumpărarea articolelor în orașe
 
 Cristo Redentor = Cristo Redentor
@@ -270,7 +259,6 @@ Culture cost of adopting new Policies reduced by 10% = Costul în cultură de ad
 
 Kremlin = Kremlin
 'The Law is a fortress on a hill that armies cannot take or floods wash away.'   –- The Prophet Muhammed = 'Legea este o fortăreață pe un deal, pe care armatele nu o pot lua, iar ploile nu o pot spăla' - Profetul Mohamed
- # Requires translation!
 Defensive buildings in all cities are 25% more effective = Clădirile defensive din toate orașele sunt cu 25% mai eficiente
 
 
@@ -314,7 +302,6 @@ Sydney Opera House = Opera din Sydney
 +1 happiness in each city = +1 bucurie în fiecare orș
 
 Pentagon = Pentagon
- # Requires translation!
 'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 'În pregătirea bătăliilor am descoperit că întotdeauna planurile sunt inutile, însă planificarea este indispensabilă. - Dwight D. Eisenhower'
 Gold cost of upgrading military units reduced by 33% = Costurile în aur pentru dezvoltarea unităților militare reduse cu 33%
 
@@ -337,7 +324,6 @@ SS Stasis Chamber = Cameră de biostază pentru nave spațiale
 
 Hubble Space Telescope = Telescopul spațial Hubble
 'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 'Ceea ce este admirabil nu este că acel câmp al stelelor este atât de vast, ci că omul l-a măsurat şi îl măsoară' - Anatole France
- # Requires translation!
 2 free great scientists appear = 2 mari oameni de știință gratuiți au apărut
 
 Increases production of spaceship parts by 25% = Crește producția pieselor pentru nave spațiale cu 25%
@@ -358,26 +344,21 @@ Requires a [buildingName] in this city = Necesită ca [buildingName] să fie în
 Requires [resource] = Necesită [resource]
 Required tech: [requiredTech] = Tehnologia necesară: [requiredTech]
 
- # Requires translation!
-Current construction = 
- # Requires translation!
-Construction queue = 
- # Requires translation!
-Pick a construction = 
+Current construction = Construcția curentă
+Construction queue = Coada de construcții
+Pick a construction = Alege o construcție
 Queue empty = Coadă goală
 Add to queue = Adaugă în coadă
 Remove from queue = Scoate din coadă
  # Requires translation!
 Show stats drilldown = 
- # Requires translation!
-Show construction queue = 
+Show construction queue = Arată coada de construcție
 
 Diplomacy = Diplomaţie
 War = Război
 Peace = Pace
 Declare war = Declară război
- # Requires translation!
-Declare war on [civName]? = 
+Declare war on [civName]? = Declari război contra [civName]?
 [civName] has declared war on us! = [civName] ne-au declarat război!
 [leaderName] of [nation] = [leaderName] de [nation]
 You'll pay for this! = Veți plăti pentru asta!
@@ -400,8 +381,7 @@ We will remember this. = O să ținem minte asta.
 [civName] has declared war on [targetCivName]! = [civName] a declarat război cu [targetCivName]!
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] împreună cu [targetCivName] au semnat tratatul de pace!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] împreună cu [targetCivName] au semnat declarația de prietenie!
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! = [civName] a denunțat [targetCivName]!
 
 Unforgivable = De neiertat
 Enemy = Inamic
@@ -421,8 +401,7 @@ We applaud your liberation of our conquered cities! = Aplaudăm liberarea orașe
 Years of peace have strengthened our relations. = Anii de pace ne-au întărit relațiile.
  # Requires translation!
 Our mutual military struggle brings us closer together. = 
- # Requires translation!
-We have signed a public declaration of friendship = 
+We have signed a public declaration of friendship = Am semnat o declarație publică de prietenie!
  # Requires translation!
 You have declared friendship with our enemies! = 
  # Requires translation!
@@ -439,8 +418,7 @@ You fulfilled your promise to stop settling cities near us! =
  # Requires translation!
 You refused to stop settling cities near us = 
 Your arrogant demands are in bad taste = Cererile tale arogante sunt de prost gust
- # Requires translation!
-Your use of nuclear weapons is disgusting! = 
+Your use of nuclear weapons is disgusting! = Folosirea armelor nucleare e dezgustătoare!
 
 Demands = Cereri
 Please don't settle new cities near us. = Te rog să nu mai întemeiezi orașe lângă mine.
@@ -512,8 +490,7 @@ Nebuchadnezzar II = Nebuchadnezzar II
 
 Greece = Grecia
 Alexander = Alexandru
- # Requires translation!
-City-State Influence degrades at half and recovers at twice the normal rate = 
+City-State Influence degrades at half and recovers at twice the normal rate = Rata de degradare a influenței asupra orașelor stat e înjumătățită, și de recuperare e dublată
 
 China = China
 Wu Zetian = Wu Zetian
@@ -654,8 +631,7 @@ AI = Bot
 Remove = Scoate
 Random = Aleator
 Human = Om
- # Requires translation!
-Hotseat = 
+Hotseat = Pe rând
 User ID = ID Utilizator
  # Requires translation!
 Click to copy = 
@@ -733,8 +709,7 @@ Map uploaded successfully! =
 
 Options = Opțiuni
 Display options = Opțiuni afișaj
- # Requires translation!
-Gameplay options = 
+Gameplay options = Opțiuni de joc
 Other options = Alte opțiuni
 Turns between autosaves = Ture între salvările automate
 Sound effects volume = Volumul efectelor
@@ -752,8 +727,7 @@ Show resources and improvements =
 Check for idle units = 
  # Requires translation!
 Move units with a single tap = 
- # Requires translation!
-Show tutorials = 
+Show tutorials = Arată tutorialele
  # Requires translation!
 Auto-assign city production = 
  # Requires translation!
@@ -781,14 +755,12 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Nu se poa
 [cityName] has been founded! = [cityName] a fost fondat!
 [cityName] is starving! = [cityName] suferă de foame!
 [construction] has been built in [cityName] = [construction] a fost construit/ă în [cityName]
- # Requires translation!
-[wonder] has been built in a faraway land = 
+[wonder] has been built in a faraway land = [wonder] a fost construit într-un tărâm îndepărtat!
 Work has started on [construction] = Munca a început pentru [construction]
  # Requires translation!
 [cityName] cannot continue work on [construction] = 
 [cityname] has expanded its borders! = [cityname] și-a extins frontierele!
- # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = Epoca de aur a luat sfârșit.
 [cityName] has been razed to the ground! = [cityName] a fost ras de pe fața pământului!
 We have conquered the city of [cityname]! = Am cucerit orașul [cityname]!
 An enemy [unit] has attacked [cityname] = Un [unit] inamic a atacat [cityname]
@@ -799,8 +771,7 @@ An enemy [unit] has captured our [ourUnit] = Un [unit] inamic ne-a capturat un [
 An enemy [unit] has destroyed our [ourUnit] = Un [unit] inamic ne-a distrus un [ourUnit]
  # Requires translation!
 An enemy [RangedUnit] has destroyed the defence of [cityname] = 
- # Requires translation!
-Enemy city [cityName] has destroyed our [ourUnit] = 
+Enemy city [cityName] has destroyed our [ourUnit] = Orașul inamic [cityName] ne-a distrus o unitate [ourUnit]
 An enemy [unit] was destroyed while attacking [cityname] = Un [unit] inamic a fost distrus în timp ce ataca [cityname]
 An enemy [unit] was destroyed while attacking our [ourUnit] = Un [unit] inamic a fost distrus în timp ce ne ataca un [ourUnit]
  # Requires translation!
