--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -765,7 +765,7 @@ Your Golden Age has ended. = Epoca de aur a luat sfârșit.
 We have conquered the city of [cityname]! = Am cucerit orașul [cityname]!
 An enemy [unit] has attacked [cityname] = Un [unit] inamic a atacat [cityname]
 An enemy [unit] has attacked our [ourUnit] = Un [unit] inamic ne-a atacat un [ourUnit]
-Enemy city [cityName] has attacked our [ourUnit] = Orașul inamic [cityName] ne-a atacat un [outUnit]
+Enemy city [cityName] has attacked our [ourUnit] = Orașul inamic [cityName] ne-a atacat un [ourUnit]
 An enemy [unit] has captured [cityname] = Un [unit] inamic a capturat [cityname]
 An enemy [unit] has captured our [ourUnit] = Un [unit] inamic ne-a capturat un [ourUnit]
 An enemy [unit] has destroyed our [ourUnit] = Un [unit] inamic ne-a distrus un [ourUnit]
