new french translation

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -6,7 +6,7 @@ Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-le
 Enter the city screen!\nClick the city button twice = Allez dans l'écran d'une cité !\nCliquer sur la cité deux fois
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Choisissez une technologie à rechercher !\nCliquer sur le bouton technologies (en vert, en haut à gauche) > \n Choisir une technologie > Cliquer sur 'Rechercher' (en bas à droite)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Choisissez une construction !\nAllez dans l'écran d'une cité > Cliquer sur une unité ou un bâtiment (bord inférieur gauche) > \n cliquer sur 'ajouter à la file'
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passer un tour !\nParcourir les unités avec 'Unité suivante'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Réassignez les cases utilisées\nAllez dans l'écran d'une cité > Cliquer la case utilisée (verte) pour la libérer > \nCliquer sur une case libre pour lui affecter de la population
 Meet another civilization!\nExplore the map until you encounter another civilization! = Rencontrez une autre civilisation !\nExplorez la carte jusqu'à rencontrer une autre civilisation !
@@ -63,9 +63,9 @@ Colossus = Colosse
 Temple = Temple
 Burial Tomb = Tombeau
  # Requires translation!
-Doubles Gold given to enemy if city is captured = 
+Doubles Gold given to enemy if city is captured = Double l'Or donné à un ennemi si une cité est capturée
  # Requires translation!
-Mud Pyramid Mosque = 
+Mud Pyramid Mosque = Mosquée Pyramidale de Terre
 
 The Oracle = L'oracle
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'L'Oracle a dit que j'étais le plus sage de tous les grecs. C'est parce que je suis le seul, de tous les grecs, à savoir que je ne sais rien' - Socrate
@@ -296,21 +296,21 @@ Requires [resource] = [resource] requis(e)
 Required tech: [requiredTech] = Nécessite la technologie: [requiredTech]
 
  # Requires translation!
-Current construction = 
+Current construction = Construction actuelle
  # Requires translation!
-Construction queue = 
+Construction queue = file de Construction
  # Requires translation!
-Pick a construction = 
+Pick a construction = Choisissez une Construction
  # Requires translation!
-Queue empty = 
+Queue empty = file vide
  # Requires translation!
-Add to queue = 
+Add to queue = Ajouter à la file
  # Requires translation!
-Remove from queue = 
+Remove from queue = Enlever de la file
  # Requires translation!
-Show stats drilldown = 
+Show stats drilldown = Afficher les statistiques en détail
  # Requires translation!
-Show construction queue = 
+Show construction queue = Afficher la file de Construction
 
 Diplomacy = Diplomatie
 War = Guerre
@@ -686,7 +686,7 @@ A [unitName] has joined us! = Un(e) [unitName] nous a rejoint!
 An ancient tribe trains our [unitName] in their ways of combat! = Une tribue ancienne a entrainée notre [unitName] au combat
 We have found a stash of [amount] gold in the ruins! = Nous avons trouvés un tas de [amount] ors dans les ruines!
  # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! = Nous avons trouvé une carte grossière dans les ruines !
 [unit] finished exploring. = [unit] a fini d'explorer
 [unit] has no work to do. = [unit] n'a rien à faire
 You're losing control of [name]. = Vous perdez le contrôle de [name]
@@ -713,7 +713,7 @@ Your relationship with [cityStateName] is about to degrade = Notre relation avec
 Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
 A new barbarian encampment has spawned! = Un nouveau campement barbare est apparu !
  # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+Received [goldAmount] Gold for capturing [cityName] = Vous recevez [goldAmount] Or pour la capture de [cityName]
 
 # World Screen UI
 
@@ -776,7 +776,7 @@ Social policies = Doctrines
 Community = Communauté
 Close = Fermer
  # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Voulez vous quitter la partie ?
 
 # City screen
 
@@ -1472,7 +1472,7 @@ Knight = Chevalier
 Camel Archer = Archer méhariste
 Conquistador = Conquistador
  # Requires translation!
-Mandekalu Cavalry = 
+Mandekalu Cavalry = Cavalrie Mandékalou
 Defense bonus when embarked = Bonus de défense quand embarqué
 Naresuan's Elephant = Elephant de Naresuan
 Samurai = Samuraï
