--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -6,7 +6,7 @@ Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-le
 Enter the city screen!\nClick the city button twice = Откройте экран города!\nНажмите на кнопку города дважды
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Выберите технологию для исследования!\nНажмите на кнопку технология (зелёная, сверху слева) > \n Выберите технологию > Нажмите 'Исследовать' (снизу справа)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Выберете что создавать!\nОткройте экран города > Нажмите на подразделение или здание (нижняя левая сторона) > \n нажмите «добавить в очередь»
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустите ход!\nВыберите юнита с помощью кнопки 'Следующий юнит' > Нажмите 'Следующий ход'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Переназначьте обрабатываемые клетки!\nОткройте экран города > Нажмите на назначенную (зелёную) клетку чтобы освободить её > \n Нажмите на свободную клетку чтобы назначить туда рабочих
 Meet another civilization!\nExplore the map until you encounter another civilization! = Встретьте другую цивилизацию!\nИсследуйте мир пока вы не встретите другую цивилизацию!
@@ -63,9 +63,9 @@ Colossus = Колосс Родосский
 Temple = Храм
 Burial Tomb = Гробница
  # Requires translation!
-Doubles Gold given to enemy if city is captured = 
+Doubles Gold given to enemy if city is captured = Враг получает удвоеное количество золота, если город был захвачен
  # Requires translation!
-Mud Pyramid Mosque = 
+Mud Pyramid Mosque = Глиняная мечеть
 
 The Oracle = Оракул
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Он спросил, есть ли кто-нибудь на свете мудрее меня, и Пифия ему ответила, что никого нет мудрее... потому что я коли уж не знаю, то и не думаю, что знаю' - Сократ в «Апологии Сократа» Платона
@@ -296,21 +296,21 @@ Requires [resource] = Требует [resource]
 Required tech: [requiredTech] = Требуется технология: [requiredTech]
 
  # Requires translation!
-Current construction = 
+Current construction = Текущее строительство
  # Requires translation!
-Construction queue = 
+Construction queue = Очередь на постройку
  # Requires translation!
-Pick a construction = 
+Pick a construction = Выберите строительство
  # Requires translation!
-Queue empty = 
+Queue empty = Очереди нет
  # Requires translation!
-Add to queue = 
+Add to queue = Добавить в очередь
  # Requires translation!
-Remove from queue = 
+Remove from queue = Убрать с очереди
  # Requires translation!
-Show stats drilldown = 
+Show stats drilldown = Показать статистику более детально
  # Requires translation!
-Show construction queue = 
+Show construction queue = Показать очередь на постройку
 
 Diplomacy = Дипломатия
 War = Война
@@ -686,7 +686,7 @@ A [unitName] has joined us! = [unitName] присоединился к нам!
 An ancient tribe trains our [unitName] in their ways of combat! = Древнее племя обучает наших [unitName] своим способам ведения боя!
 We have found a stash of [amount] gold in the ruins! = Мы нашли сундук с [amount] золота в руинах!
  # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! = Мы нашли грубо нарисованую карту в руинах!
 [unit] finished exploring. = [unit] завершил исследование местности.
 [unit] has no work to do. = [unit] завершил все доступные работы.
 You're losing control of [name]. = Вы теряете влияние на [name].
@@ -713,7 +713,7 @@ Your relationship with [cityStateName] is about to degrade = Ваши отнош
 Your relationship with [cityStateName] degraded = Ваши отношения с [cityStateName] ухудшились
 A new barbarian encampment has spawned! = Появился новый лагерь варваров!
  # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+Received [goldAmount] Gold for capturing [cityName] = Получино [goldAmount] золота за захват города [cityName]
 
 # World Screen UI
 
@@ -1471,7 +1471,7 @@ Knight = Рыцарь
 Camel Archer = Лучник на верблюде
 Conquistador = Конкистадор
  # Requires translation!
-Mandekalu Cavalry = 
+Mandekalu Cavalry = Всадник мандекалу
 Defense bonus when embarked = Бонус к защите когда погружен на корабль
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
