--- a/android/assets/jsons/translationsByLanguage/completionPercentages.properties
+++ b/android/assets/jsons/translationsByLanguage/completionPercentages.properties
@@ -1,17 +1,17 @@
 Traditional_Chinese = 95
 Italian = 99
-Russian = 99
 Polish = 98
-Romanian = 48
+Russian = 100
+Romanian = 75
 Korean = 93
 Simplified_Chinese = 95
-German = 95
+German = 94
 English = 0
-Ukrainian = 99
-French = 99
+Ukrainian = 100
+French = 100
 Portuguese = 82
 Indonesian = 74
 Czech = 95
 Malay = 13
-Czech = 95
+Spanish = 97
 Dutch = 25
