Fix meaning of work boat capability translation
"May create improvements on water resources" was translated as if it was "May create improvements on water tiles". I fixed this so the translation is correct now

--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1485,7 +1485,7 @@ Archer = Bogenschütze
 Bowman = Kampfbogenschütze
 Work Boats = Arbeitsboote
 Cannot enter ocean tiles until Astronomy = Ozeanfelder können nicht befahren werden bis Astronomie erforscht ist
-May create improvements on water resources = Kann Verbesserungen auf Wasserfeldern bauen
+May create improvements on water resources = Kann Verbesserungen auf Ressourcen im Wasser bauen
 Trireme = Trireme
 Cannot enter ocean tiles = Ozeanfelder können nicht befahren werden
 Chariot Archer = Streitwagen-Bogenschütze
