--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -666,7 +666,7 @@ An enemy [unit] was spotted in our territory = Abbiamo avvistato un'unità nemic
 [amount] enemy units were spotted near our territory = Abbiamo avvistato [amount] unità nemiche vicino ai nostri confini!
 [amount] enemy units were spotted in our territory = Abbiamo avvistato [amount] unità nemiche nel nostro territorio!
 The civilization of [civName] has been destroyed! = La civiltà [civName] è stata distrutta!
-The City-State of [name] has been destroyed! = La Città-Stato di [name] è stata distrutta!
+The City-State of [name] has been destroyed! = La Città-Stato [name] è stata distrutta!
 We have captured a barbarian encampment and recovered [goldAmount] gold! = Abbiamo distrutto un accampamento barbaro e recuperato [goldAmount] Oro!
 A barbarian [unitType] has joined us! = L'unità barbarica [unitType] si è unita a noi!
 We have found survivors in the ruins - population added to [cityName] = Abbiamo trovato dei superstiti nelle rovine, che si sono aggiunti alla città di [cityName]!
@@ -700,7 +700,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Abbiamo ric
 Your relationship with [cityStateName] is about to degrade = Stai perdendo il controllo di [cityStateName]
 Your relationship with [cityStateName] degraded = Tu e [cityStateName] non siete più amici!
 A new barbarian encampment has spawned! = È sorto un nuovo accampamento barbaro!
-Received [goldAmount] Gold for capturing [cityName] = Hai ricevuto [goldAmount] per la conquista di [cityName]
+Received [goldAmount] Gold for capturing [cityName] = Hai ricevuto [goldAmount] per la conquista di [cityName]!
 
 # World Screen UI
 
@@ -762,8 +762,7 @@ Victory status = Condizioni di vittoria
 Social policies = Politiche sociali
 Community = Community
 Close = Chiudi
- # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Vuoi uscire dal gioco?
 
 # City screen
 
