--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -701,6 +701,7 @@ Your relationship with [cityStateName] is about to degrade = Ваші стосу
 Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
 A new barbarian encampment has spawned! = З’явився новий варварський табір!
 Received [goldAmount] Gold for capturing [cityName] = Отримано [goldAmount] золота за захоплення міста [cityName]
+Our proposed trade request is no longer relevant! = Наша торгова пропозиція не є доречною!
 
 # World Screen UI
 
@@ -845,7 +846,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Завершити будування дива
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Ваші громадяни були задоволені вашим правлінням так довго, що імперія вступає в Золотий вік!
 You have entered the [newEra]! = Ви увійшли до епохи [newEra]!
-[civName] has entered the [eraName]! = [civName] ввійшла у [eraName]!
+[civName] has entered the [eraName]! = Нація [civName] увійшла в епоху [eraName]!
 [policyBranch] policy branch unlocked! = Інститути галузі [policyBranch] розблоковано!
 Overview = Огляд
 Total = Усього
@@ -874,7 +875,7 @@ Action = Дія
 Defeated = Переможено
 Tiles = Клітини
 Natural Wonders = Природні дива
-Treasury deficit = Дефіцит скарбів
+Treasury deficit = Дефіцит коштів
 
 #Victory
 
@@ -1279,10 +1280,10 @@ Increases embarked movement +1 = Рух підрозділів на борту +
 Ancient era = Доісторичність
 Classical era = Античність
 Medieval era = Середньовіччя
-Renaissance era = Епоха Відродження
+Renaissance era = Відродження
 Industrial era = Промислова ера
 Modern era = Сучасність
-Information era = Інформаційна епоха
+Information era = Інформаційна ера
 Future era = Майбутнє
 
 # Terrains
