--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -5,7 +5,7 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Постройте город!\nВыберите поселенца (юнит с флажком) > Нажмите 'Основать город' (нижний левый угол)
 Enter the city screen!\nClick the city button twice = Откройте экран города!\nНажмите на кнопку города дважды
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Выберите технологию для исследования!\nНажмите на кнопку технология (зелёная, сверху слева) > \n Выберите технологию > Нажмите 'Исследовать' (снизу справа)
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Выберете что создавать!\nОткройте экран города > Нажмите на подразделение или здание (нижняя левая сторона) > \n нажмите «добавить в очередь»
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Выберете что создавать!\nОткройте экран города > Нажмите на юнит или здание (нижняя левая сторона) > \n нажмите «добавить в очередь»
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустите ход!\nВыберите юнита с помощью кнопки 'Следующий юнит' > Нажмите 'Следующий ход'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Переназначьте обрабатываемые клетки!\nОткройте экран города > Нажмите на назначенную (зелёную) клетку чтобы освободить её > \n Нажмите на свободную клетку чтобы назначить туда рабочих
 Meet another civilization!\nExplore the map until you encounter another civilization! = Встретьте другую цивилизацию!\nИсследуйте мир пока вы не встретите другую цивилизацию!
@@ -293,13 +293,13 @@ Requires [resource] = Требует [resource]
 Required tech: [requiredTech] = Требуется технология: [requiredTech]
 
 Current construction = Текущее строительство
-Construction queue = Очередь на постройку
+Construction queue = Очередь cтроительства
 Pick a construction = Выберите строительство
-Queue empty = Очереди нет
+Queue empty = Очередь пустая
 Add to queue = Добавить в очередь
-Remove from queue = Убрать с очереди
-Show stats drilldown = Показать статистику более детально
-Show construction queue = Показать очередь на постройку
+Remove from queue = Убрать из очереди
+Show stats drilldown = Показать развёрнутую статистику
+Show construction queue = Показать очередь строительства 
 
 Diplomacy = Дипломатия
 War = Война
@@ -1457,7 +1457,7 @@ Landsknecht = Ландскнехт
 Knight = Рыцарь
 Camel Archer = Лучник на верблюде
 Conquistador = Конкистадор
-Mandekalu Cavalry = Всадник мандекалу
+Mandekalu Cavalry = Всадники мандекалу
 Defense bonus when embarked = Бонус к защите когда погружен на корабль
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
