--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -139,7 +139,7 @@ Connects trade routes over water = Ticaret yollarını su üzerinden bağlar
 
 University = Üniversite
 +2 Science from each worked Jungle tile = Çalışılan her sık ormandan +2 Bilim
-Wat = 
+Wat = Wat
 
 Oxford University = Oxford Üniversitesi
 Castle = Kale
@@ -185,7 +185,7 @@ Get  = Al
 
 Himeji Castle = Himeji Kalesi
 'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 'Bushido ölümün varlığında gerçekleşir. Bu, yaşam ve ölüm arasında bir seçim olduğunda ölümü seçmek anlamına gelir. Başka bir mantık yürütme yok.' - Yamamoto Tsunetomo
-+15% combat strength for units fighting in friendly territory = 
++15% combat strength for units fighting in friendly territory = Dost bölgelerde savaşan birimler için +15% savaş gücü
 
 Taj Mahal = Taç Mahal
 'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 'Taç Mahal, zamanın yanağında asılı kalan bir gözyaşı gibi nehrin kıyısında yükselir.' - Rabindranath Tagore
@@ -198,7 +198,7 @@ Hermitage = İnziva Yeri
 
 The Louvre = Louvre Müzesi
 'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 'Her gerçek sanat eserinin yeryüzü ve güneş gibi var olmak için birçok nedeni vardır' - Ralph Waldo Emerson
-Free Great Artist Appears = Ücretsiz Büyük Sanatçı Ortaya Çıkar
+Free Great Artist Appears = Ücretsiz Harika Sanatçı Ortaya Çıkar
 
 Seaport = Deniz Limanı
 +1 production and gold from all sea resources worked by the city = Şehrin çalıştığı tüm deniz kaynaklarından +1 üretim ve altın
