--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -184,6 +184,7 @@ Choose a free great person = Ücretsiz harika bir kişi seçin
 Get  = Al 
 
 Himeji Castle = Himeji Kalesi
+ # Requires translation!
 'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 'Bushido ölümün varlığında gerçekleşir. Bu, yaşam ve ölüm arasında bir seçim olduğunda ölümü seçmek anlamına gelir. Başka bir mantık yürütme yok.' - Yamamoto Tsunetomo
 +15% combat strength for units fighting in friendly territory = Dost bölgelerde savaşan birimler için +15% savaş gücü
 
