--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -27,7 +27,7 @@ Palace = Saray
 Indicates the capital city = Başkenti gösterir
 
 Monument = Anıt
-Granary = Tahıl ambarı
+Granary = Tahıl Ambarı
 Stone Works = Taş İşleri
 Must not be on plains = Ovalarda olmamalı
 
