--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -373,7 +373,7 @@ Provides 3 food in capital and 1 food in other cities at 30 Influence = 30 Etki'
 Provides 3 happiness at 30 Influence = 30 Etki ile 3 mutluluk sağlar
 Provides land units every 20 turns at 30 Influence = 30 Etki Alanında her 20 turda bir arazi birimleri sağlar.
 Gift [giftAmount] gold (+[influenceAmount] influence) = Hediye edilen [giftAmount] altın (+ [influenceAmount] etki eder)
-Relationship changes in another [turnsToRelationshipChange] turns = [turnToRelationshipChange] Tur içinde ilişki değişir
+Relationship changes in another [turnsToRelationshipChange] turns = [turnsToRelationshipChange] Tur içinde ilişki değişir
 
 Cultured = Kültürlü
 Maritime = Denizci
@@ -641,7 +641,7 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = [unitName
 [cityName] is starving! = [cityName] açlıktan ölüyor!
 [construction] has been built in [cityName] = [construction] [cityName] içinde oluşturuldu 
 [wonder] has been built in a faraway land = [wonder] uzak bir ülkede inşa edilmiştir
-Work has started on [construction] = [İnşaat] üzerinde çalışılmaya başlanıldı
+Work has started on [construction] = [construction] üzerinde çalışılmaya başlanıldı
 [cityName] cannot continue work on [construction] = [cityName], [construction] üzerinde çalışmaya devam edemiyor
 [cityname] has expanded its borders! = [cityname] sınırlarını genişletti!
 Your Golden Age has ended. = Altın Çağınız sona erdi
@@ -679,7 +679,7 @@ We have found a crudely-drawn map in the ruins! = Kalıntılarda kaba taslak bir
 [unit] has no work to do. = [unit] biriminin yapacak işi yok.
 You're losing control of [name]. = [name] kontrolünü kaybediyorsun.
 You and [name] are no longer friends! = Sen ve [name] artık arkadaş değilsiniz!
-Your alliance with [name] is faltering. = [Name] ile müttefikliğiniz azalıyor.
+Your alliance with [name] is faltering. = [name] ile müttefikliğiniz azalıyor.
 You and [name] are no longer allies! = Siz ve [name] artık müttefik değilsiniz!
 [civName] gave us a [unitName] as gift near [cityName]! = [civName] bize [cityName] yakınındaki bir [unitName] hediye etti!
 [civName] has denounced us! = [civName] bizi kınadı!
@@ -769,7 +769,7 @@ Do you want to exit the game? = Oyundan çıkmak istiyor musunuz?
 Exit city = Şehirden çık
 Raze city = Şehri yak
 Stop razing city = Şehri yakmayı durdur
-Buy for [amount] gold = [Miktar] altına al
+Buy for [amount] gold = [amount] altına al
 Buy = Al
 Would you like to purchase [constructionName] for [buildingGoldCost] gold? = [buildingGoldCost] altına [constructionName] satın almak ister misiniz?
 Maintenance cost = Bakım maliyeti
@@ -789,11 +789,11 @@ Specialists = Uzmanlar
 Food eaten = Yenen yiyecekler
 Growth bonus = Büyüme bonusu
 Unassigned population = Atanmamış nüfus
-[turnsToExpansion] turns to expansion = genişletmeye [turnToExpansion] tur
+[turnsToExpansion] turns to expansion = genişletmeye [turnsToExpansion] tur
 Stopped expansion = Genişleme durdu
-[turnsToPopulation] turns to new population =  yeni nüfusa [turnToPopulation] tur
+[turnsToPopulation] turns to new population =  yeni nüfusa [turnsToPopulation] tur
 Food converts to production = Gıda üretime dönüştürür
-[turnsToStarvation] turns to lose population = nüfusu kaybetmeye [turnToStarvation] tur
+[turnsToStarvation] turns to lose population = nüfusu kaybetmeye [turnsToStarvation] tur
 Stopped population growth = Nüfus artışı durdurdu
 In resistance for another [numberOfTurns] turns = Başka [numberOfTurns] tur için direnç
 Sell for [sellAmount] gold = [sellAmount] altına sat
