small mistake correction

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -325,7 +325,7 @@ Indeed! = Parfait!
 Denounce ([numberOfTurns] turns) = Dénoncer ([numberOfTurns] tours)
 We will remember this. = Nous nous en souviendrons.
 
-[civName] has declared war on [targetCivName]! = [civName] a déclaré à la civilisation [targetCivName] !
+[civName] has declared war on [targetCivName]! = [civName] a déclaré la guerre à la civilisation [targetCivName] !
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] et [targetCivName] ont signé un traité de Paix !
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] et [targetCivName] ont signé une déclaration d'amitié !
 [civName] has denounced [targetCivName]! = [civName] a accusé la civilisation [targetCivName] !
