--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -517,6 +517,10 @@ Map type = Тип мапи
 Generated = Створена
 Existing = Існуюче
 Map generation type = Тип генерації мап
+Pangaea = Пангея
+Continents = Континенти
+Default = Звичайний
+Perlin = Перлин
 Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
@@ -879,13 +883,13 @@ Treasury deficit = Дефіцит коштів
 
 #Victory
 
-Science victory = Научна перемога
+Science victory = Наукова перемога
 Cultural victory = Культурна перемога
 Conquest victory = Завоювання
 Complete all the spaceship parts\n to win! = Побудуйте усі частини космічного корабля\n, щоб виграти!
 Complete 5 policy branches\n to win! = Завершіть 5 гілок інститутів щоб перемогти!
 Destroy all enemies\n to win! = Знищь всіх ворогів\n, щоб виграти!
-You have won a scientific victory! = Ви здобули научну перемогу!
+You have won a scientific victory! = Ви здобули наукову перемогу!
 You have won a cultural victory! = Ви здобули культурну перемогу!
 You have won a domination victory! = Ви знищили усіх!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Ви домоглися перемоги завдяки приголомшливій силі вашої культури. Велич вашої цивілізації — пишність пам’ятників та сила її митців вразили світ! Поети будуть шанувати вас до тих пір, поки краса приносить радість стомленому серцю.
@@ -1077,7 +1081,7 @@ Free Thought = Вільнодумство
 +1 science from every trading post, +17% science from universities = +1 наука з кожного торгового пункту, +17% науки з університетів
 Sovereignty = Державний суверенітет
 +15% science while empire is happy = +15% науки, коли імперія щаслива
-Scientific Revolution = Научна революція
+Scientific Revolution = Наукова революція
 Gain 2 free technologies = Отримати 2 безкоштовні технології
 Rationalism Complete = Раціоналізм завершено
 +1 gold from all science buildings = +1 золото від усіх наукових будівель
