simplified Chinese translations

--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -516,9 +516,9 @@ Askia = 阿斯基亚
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 摧毁蛮族营地及劫掠城市时获得三倍金钱，单位船运时有自卫能力
 
  # Requires translation!
-Spain = 
+Spain = 西班牙
  # Requires translation!
-Isabella = 
+Isabella = 伊莎贝拉
  # Requires translation!
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
 
